# robot_constraint_editor

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cpp_build.yml
design/: Constraint_editor_UX_flow_diagram.xml
design/UML/: classes.drawio
design/specs_document/: config_file.yaml  config_file_format.yaml  specs_document.lyx
examples/minimal_example/: CMakeLists.txt  main.cpp
examples/tests/: CMakeLists.txt  tests.cpp
include/: vfi_configuration_file_yaml.hpp  vficonfigurationfile.hpp
include/dqrobotics_extensions/robot_constraint_editor/: robot_constraint_editor.hpp  utils.hpp  vfi_configuration_file.hpp  vfi_configuration_file_yaml.hpp
qt/configuration_window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  openconstraintfiledialog.cpp  openconstraintfiledialog.h  openconstraintfiledialog.ui
src/: vfi_configuration_file_yaml.cpp
src/dqrobotics_extensions/robot_constraint_editor/: robot_constraint_editor.cpp  utils.cpp  vfi_configuration_file_yaml.cpp
